main page responsive and modify

--- a/.env
+++ b/.env
@@ -1,25 +1,6 @@
-# PORT=9191
-
-# # MONGO_URI=mongodb+srv://subhaskushwahak:6265738854@cluster0.3qf116h.mongodb.net/mydatabase?retryWrites=true&w=majority&appName=Cluster0
-
-# SMTP_HOST=smtp.gmail.com
-# SMTP_PORT=587
-# SMTP_USERNAME=samarhirau.official@gmail.com
-# SMTP_PASSWORD=mpqjpngtfeestrxq
-# SMTP_FROM_EMAIL=samarhirau.official@gmail.com
-
-# JWT_SECRET=12345
-
-# aayushpawar7748@gmail.com
-
-# byqj xtxf sphz jxjy
-
-# MONGO_URI=mongodb+srv://aayushpawar7748:9kt2pwbJ1u8hVTVZ@cluster0.zprlwo7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
-
 PORT=9191
 
-MONGO_URI=mongodb+srv://aayushpawar7748:9kt2pwbJ1u8hVTVZ@cluster0.zprlwo7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://saurabh231018:Saurabh231018@cluster0.hlm0uix.mongodb.net/ridbharat?retryWrites=true&w=majority&appName=Cluster0
 
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
@@ -28,4 +9,3 @@ SMTP_PASSWORD=byqjxtxfsphzjxjy
 SMTP_FROM_EMAIL=aayushpawar7748@gmail.com
 
 JWT_SECRET=yourSuperSecretKey123
-JWT_SECRET=12345
